# data_structures

./: Makefile.am  README  autogen.sh  configure.ac  valgrind_testsuite.sh
map/: Makefile.am  map.c  map.h
map/tests/: init_normal.c  map_add_already_existing.c  map_add_first_in_list.c  map_add_middle_in_list.c  map_add_second_in_list.c  map_destroy_all_empty.c  map_destroy_first_in_list.c  map_destroy_last_in_list.c  map_get_first_in_list.c  map_get_last_in_list.c  map_get_middle_in_list.c  map_get_non_existant.c  map_get_only_in_list.c  map_init_normal.c  map_init_null.c  map_remove_first_in_list.c  map_remove_last_in_list.c  map_remove_middle_in_list.c  map_remove_non_existant.c  map_remove_only_in_list.c  simple.c
vector/: Makefile.am  vector.c  vector.h
vector/tests/: clone_full.c  clone_only.c  destroy_destructor.c  destroy_empty.c  destroy_normal.c  is_empty_empty.c  pop_back_only.c  push_front.c  push_front_resize.c  vector_clone_empty.c  vector_is_empty_not_empty.c  vector_new_normal.c  vector_pop_back.c  vector_pop_back_empty.c  vector_pop_front.c  vector_pop_front_empty.c  vector_pop_front_only.c  vector_push_back.c  vector_push_back_resize.c  vector_remove_at_first.c  vector_remove_at_last.c  vector_remove_at_middle.c  vector_template.c
