AC_INIT([data_structures],
         [0.0.1],
         [gabriel@zuh0.com],
         [data_structures],
         [https://git.zuh0.com])

AM_INIT_AUTOMAKE([
        foreign
        subdir-objects
])
AM_SILENT_RULES([yes])

AC_PROG_CC

LT_INIT([shared disable-static])

AC_CONFIG_FILES([
                 Makefile
                 map/Makefile
                 ])
AC_SUBST(AM_CFLAGS)
AC_OUTPUT
